--- a/men-products.html
+++ b/men-products.html
@@ -12,6 +12,11 @@
             <div class="logo">
                 <img src="assets/images/Buysmartlogo.PNG" alt="BuySmart Enterprise Logo">
             </div>
+            <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
