--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BuySmart Enterprise - About</title>
+    <title>Buysmart Enterprise - About</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/images/Buysmartlogo.PNG" alt="BuySmart Enterprise Logo">
+                <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
             <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
                 <span></span>
@@ -45,14 +45,14 @@
     <main>
         <section class="about-section">
             <div class="about-header">
-                <h1>About BuySmart Enterprise</h1>
-                <p>Welcome to BuySmart Enterprise, your trusted online destination for high-quality household, general, and luxury goods. Our mission is to provide you with the best shopping experience, offering a wide range of products that cater to your everyday needs and aspirations.</p>
+                <h1>About Buysmart Enterprise</h1>
+                <p>Welcome to Buysmart Enterprise, your trusted online destination for high-quality household, general, and luxury goods. Our mission is to provide you with the best shopping experience, offering a wide range of products that cater to your everyday needs and aspirations.</p>
             </div>
         </section>
 
         <section class="mission-vision">
             <h2>Our Mission</h2>
-            <p>At BuySmart Enterprise, our mission is to empower our customers by providing them with access to premium products that enhance their lifestyle. We strive to offer exceptional value, quality, and service, ensuring that every shopping experience with us is seamless and enjoyable.</p>
+            <p>At Buysmart Enterprise, our mission is to empower our customers by providing them with access to premium products that enhance their lifestyle. We strive to offer exceptional value, quality, and service, ensuring that every shopping experience with us is seamless and enjoyable.</p>
 
             <h2>Our Vision</h2>
             <p>Our vision is to become the leading e-commerce platform in the region, recognized for our commitment to customer satisfaction, innovation, and excellence. We aim to build a community of loyal customers who trust us for all their shopping needs.</p>
@@ -60,7 +60,7 @@
 
         <section class="product-range">
             <h2>Our Product Range</h2>
-            <p>BuySmart Enterprise offers a diverse range of products, including:</p>
+            <p>Buysmart Enterprise offers a diverse range of products, including:</p>
             <ul>
                 <li>Household Appliances</li>
                 <li>Kitchen Appliances</li>
@@ -75,11 +75,11 @@
 
         <section class="customer-value">
             <h2>Our Customer Value Proposition</h2>
-            <p>At BuySmart Enterprise, we are committed to providing our customers with the best value for their money. Our products are carefully selected to ensure they meet the highest standards of quality and performance. We also offer competitive pricing, fast shipping, and excellent customer service to ensure your satisfaction.</p>
+            <p>At Buysmart Enterprise, we are committed to providing our customers with the best value for their money. Our products are carefully selected to ensure they meet the highest standards of quality and performance. We also offer competitive pricing, fast shipping, and excellent customer service to ensure your satisfaction.</p>
         </section>
 
         <section class="follow-buysmart">
-            <h2>Follow BuySmart</h2>
+            <h2>Follow Buysmart</h2>
             <p>Stay updated with our latest products and offers</p>
             <button id="follow-button" class="button">Follow</button>
             <p>Followers: <span id="follower-count">0</span></p>
@@ -98,7 +98,7 @@
                 </ul>
             </div>
             <div class="follow-section">
-                <h3>Follow BuySmart</h3>
+                <h3>Follow Buysmart</h3>
                 <button id="follow-button-footer" class="button">Follow</button>
                 <p>Followers: <span id="follower-count-footer">0</span></p>
             </div>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2026 BuySmart Enterprise. All rights reserved.</p>
+            <p>&copy; 2026 Buysmart Enterprise. All rights reserved.</p>
         </div>
     </footer>
 
