--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BuySmart Enterprise - Home</title>
+    <title>Buysmart Enterprise - Home</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/images/Buysmartlogo.PNG" alt="BuySmart Enterprise Logo">
+                <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
             <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
                 <span></span>
@@ -44,7 +44,7 @@
 
     <main>
         <section class="hero-banner">
-            <h1>Welcome to BuySmart Enterprise</h1>
+            <h1>Welcome to Buysmart Enterprise</h1>
             <p>Your one-stop shop for household, general, and luxury goods</p>
             <button class="shop-now-btn">Shop Now</button>
         </section>
@@ -156,14 +156,14 @@
         </section>
 
         <section class="follow-buysmart">
-            <h2>Follow BuySmart</h2>
+            <h2>Follow Buysmart</h2>
             <p>Stay updated with our latest products and offers</p>
             <button id="follow-button" class="button">Follow</button>
             <p>Followers: <span id="follower-count">0</span></p>
         </section>
 
         <section class="trust-badges">
-            <h2 class="centered-heading">Why Choose BuySmart?</h2>
+            <h2 class="centered-heading">Why Choose Buysmart?</h2>
             <div class="badges-grid">
                 <div class="badge">
                     <h3>Quality Products</h3>
@@ -193,7 +193,7 @@
                 </ul>
             </div>
             <div class="follow-section">
-                <h3>Follow BuySmart</h3>
+                <h3>Follow Buysmart</h3>
                 <button id="follow-button-footer" class="button">Follow</button>
                 <p>Followers: <span id="follower-count-footer">0</span></p>
             </div>
@@ -208,7 +208,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2026 BuySmart Enterprise. All rights reserved.</p>
+            <p>&copy; 2026 Buysmart Enterprise. All rights reserved.</p>
         </div>
     </footer>
 
