--- a/women-products.html
+++ b/women-products.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BuySmart Enterprise - Women Products</title>
+    <title>Buysmart Enterprise - Women Products</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/images/Buysmartlogo.PNG" alt="BuySmart Enterprise Logo">
+                <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
             <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
                 <span></span>
@@ -73,7 +73,7 @@
         </section>
 
         <section class="follow-buysmart">
-            <h2>Follow BuySmart</h2>
+            <h2>Follow Buysmart</h2>
             <p>Stay updated with our latest products and offers</p>
             <button id="follow-button" class="button">Follow</button>
             <p>Followers: <span id="follower-count">0</span></p>
@@ -92,7 +92,7 @@
                 </ul>
             </div>
             <div class="follow-section">
-                <h3>Follow BuySmart</h3>
+                <h3>Follow Buysmart</h3>
                 <button id="follow-button-footer" class="button">Follow</button>
                 <p>Followers: <span id="follower-count-footer">0</span></p>
             </div>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2026 BuySmart Enterprise. All rights reserved.</p>
+            <p>&copy; 2026 Buysmart Enterprise. All rights reserved.</p>
         </div>
     </footer>
 
