--- a/household-appliances.html
+++ b/household-appliances.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BuySmart Enterprise - Household Appliances</title>
+    <title>Buysmart Enterprise - Household Appliances</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/images/Buysmartlogo.PNG" alt="BuySmart Enterprise Logo">
+                <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
             <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
                 <span></span>
@@ -74,7 +74,7 @@
         </section>
 
         <section class="follow-buysmart">
-            <h2>Follow BuySmart</h2>
+            <h2>Follow Buysmart</h2>
             <p>Stay updated with our latest products and offers</p>
             <button id="follow-button" class="button">Follow</button>
             <p>Followers: <span id="follower-count">0</span></p>
@@ -93,7 +93,7 @@
                 </ul>
             </div>
             <div class="follow-section">
-                <h3>Follow BuySmart</h3>
+                <h3>Follow Buysmart</h3>
                 <button id="follow-button-footer" class="button">Follow</button>
                 <p>Followers: <span id="follower-count-footer">0</span></p>
             </div>
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2026 BuySmart Enterprise. All rights reserved.</p>
+            <p>&copy; 2026 Buysmart Enterprise. All rights reserved.</p>
         </div>
     </footer>
 
