--- a/product-details.html
+++ b/product-details.html
@@ -58,7 +58,7 @@
 
             <div class="product-info">
                 <h1 id="product-title">Product Title</h1>
-                <p class="price" id="product-price">$100.00</p>
+                <p class="price" id="product-price">GHS 100.00</p>
                 <p class="category" id="product-category">Category: Household Appliances</p>
                 <p class="description" id="product-description">
                     This is a detailed description of the product. It includes all the features, specifications, and benefits of the product.
