New Inidvidual page commits

--- a/women-products.html
+++ b/women-products.html
@@ -49,6 +49,17 @@
     </section>
 
     <main>
+        <section class="hero-banner">
+            <div class="hero-content">
+                <h1 class="hero-title">Women Products</h1>
+                <p class="hero-subtitle">Discover our exclusive women's collection</p>
+                <div class="hero-buttons">
+                    <button class="hero-btn-primary" onclick="window.location.href='categories.html'">Shop All Categories</button>
+                    <button class="hero-btn-secondary" onclick="window.location.href='contact.html'">Contact Us</button>
+                </div>
+            </div>
+        </section>
+        
         <section class="category-section">
             <h1>Women Products</h1>
             <div class="product-grid">
