--- a/general-goods.html
+++ b/general-goods.html
@@ -50,6 +50,17 @@
     </section>
 
     <main>
+        <section class="hero-banner">
+            <div class="hero-content">
+                <h1 class="hero-title">General Goods</h1>
+                <p class="hero-subtitle">Daily essentials at unbeatable prices</p>
+                <div class="hero-buttons">
+                    <button class="hero-btn-primary" onclick="window.location.href='categories.html'">Shop All Categories</button>
+                    <button class="hero-btn-secondary" onclick="window.location.href='contact.html'">Contact Us</button>
+                </div>
+            </div>
+        </section>
+        
         <section class="category-section">
             <h1>General Goods</h1>
             <div class="product-grid">
