--- a/categories.html
+++ b/categories.html
@@ -43,6 +43,17 @@
     </header>
 
     <main>
+        <section class="hero-banner">
+            <div class="hero-content">
+                <h1 class="hero-title">Shop by Category</h1>
+                <p class="hero-subtitle">Explore our wide range of products across various categories</p>
+                <div class="hero-buttons">
+                    <button class="hero-btn-primary" onclick="window.location.href='household-appliances.html'">Household Appliances</button>
+                    <button class="hero-btn-secondary" onclick="window.location.href='contact.html'">Contact Us</button>
+                </div>
+            </div>
+        </section>
+        
         <section class="categories-section">
             <div class="categories-header">
                 <h1>Shop by Category</h1>
