Developer credits commit

--- a/about.html
+++ b/about.html
@@ -149,6 +149,9 @@
         <div class="copyright">
             <p>&copy; 2026 Buysmart Enterprise. All rights reserved.</p>
         </div>
+        <div class="developer-credits">
+            <p><i class="fas fa-code"></i> Developed by <a href="https://github.com/DromorNarh" target="_blank">Dromor Narh</a></p>
+        </div>
     </footer>
 
     <!-- Back to Top Button -->
