--- a/product-details.html
+++ b/product-details.html
@@ -109,6 +109,11 @@
         </div>
     </footer>
 
+    <!-- WhatsApp Floating Icon -->
+    <a href="https://wa.me/233244380498" class="whatsapp-float" target="_blank" title="Chat with us on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/follow.js"></script>
