--- a/women-products.html
+++ b/women-products.html
@@ -145,6 +145,11 @@
 
     <!-- Back to Top Button -->
     <button class="back-to-top" id="backToTop" title="Back to top">↑</button>
+      
+    <!-- WhatsApp Floating Icon -->
+    <a href="https://wa.me/233244380498" class="whatsapp-float" target="_blank" title="Chat with us on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
     
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
