--- a/supplements.html
+++ b/supplements.html
@@ -63,7 +63,11 @@
         
         <section class="category-section">
             <h1>Supplements</h1>
-            <div class="product-grid">
+            <div class="product-grid" id="category-products-container">
+                <!-- Products will be loaded dynamically -->
+                <div class="loading-spinner">Loading products...</div>
+            </div>
+        </section>
                 <div class="product-card">
                     <h3>Supplement 1</h3>
                     <p class="price">GHS 20.00</p>
@@ -152,8 +156,28 @@
         <i class="fab fa-whatsapp"></i>
     </a>
     
+    <script src="js/api.js"></script>
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/follow.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', async () => {
+            if (typeof window.buysmartAPI !== 'undefined') {
+                const api = window.buysmartAPI;
+                const container = document.getElementById('category-products-container');
+                if (container) {
+                    container.innerHTML = '<div class="loading-spinner">Loading products...</div>';
+                    const products = await api.getProductsByCategory('supplements');
+                    if (products.length === 0) {
+                        container.innerHTML = '<p class="no-products">No products available in this category.</p>';
+                    } else {
+                        const productCards = products.map(product => api.generateProductCard(product));
+                        container.innerHTML = productCards.join('');
+                        api.setupAddToCartListeners();
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 </html>
