New changed commits

--- a/categories.html
+++ b/categories.html
@@ -71,72 +71,56 @@
             <div class="category-grid">
                 <div class="category-card">
                     <a href="household-appliances.html">
-                        <div class="category-icon">
-                            <i class="fas fa-home"></i>
-                        </div>
+                        <img src="assets/images/Household.JPG" alt="Household Appliances">
                         <h3>Household Appliances</h3>
                         <p class="category-description">Essential appliances for your home</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="kitchen-appliances.html">
-                        <div class="category-icon">
-                            <i class="fas fa-utensils"></i>
-                        </div>
+                        <img src="assets/images/kitchen.JPG" alt="Kitchen Appliances">
                         <h3>Kitchen Appliances</h3>
                         <p class="category-description">Premium tools for your culinary needs</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="luxury-products.html">
-                        <div class="category-icon">
-                            <i class="fas fa-gem"></i>
-                        </div>
+                        <img src="assets/images/luxury.JPG" alt="Luxury Products">
                         <h3>Luxury Products</h3>
                         <p class="category-description">Exclusive premium items</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="men-products.html">
-                        <div class="category-icon">
-                            <i class="fas fa-tshirt"></i>
-                        </div>
+                        <img src="assets/images/men.JPG" alt="Men Products">
                         <h3>Men Products</h3>
                         <p class="category-description">Fashion and accessories for men</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="women-products.html">
-                        <div class="category-icon">
-                            <i class="fas fa-female"></i>
-                        </div>
+                        <img src="assets/images/women.JPG" alt="Women Products">
                         <h3>Women Products</h3>
                         <p class="category-description">Elegant fashion and accessories</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="supplements.html">
-                        <div class="category-icon">
-                            <i class="fas fa-capsules"></i>
-                        </div>
+                        <img src="assets/images/supplements.JPG" alt="Supplements">
                         <h3>Supplements</h3>
                         <p class="category-description">Health and wellness products</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="gadgets.html">
-                        <div class="category-icon">
-                            <i class="fas fa-mobile-alt"></i>
-                        </div>
+                        <img src="assets/images/gadgets.JPG" alt="Gadgets">
                         <h3>Gadgets</h3>
                         <p class="category-description">Latest tech and gadgets</p>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="general-goods.html">
-                        <div class="category-icon">
-                            <i class="fas fa-box-open"></i>
-                        </div>
+                        <img src="assets/images/generalgoods.JPG" alt="General Goods">
                         <h3>General Goods</h3>
                         <p class="category-description">Everyday essential items</p>
                     </a>
@@ -155,9 +139,7 @@
                     <div class="carousel-slide">
                         <div class="category-card">
                             <a href="household-appliances.html">
-                                <div class="category-icon">
-                                    <i class="fas fa-home"></i>
-                                </div>
+                                <img src="assets/images/Household.JPG" alt="Household Appliances">
                                 <h3>Household Appliances</h3>
                                 <p>Essential home appliances</p>
                             </a>
@@ -166,9 +148,7 @@
                     <div class="carousel-slide">
                         <div class="category-card">
                             <a href="kitchen-appliances.html">
-                                <div class="category-icon">
-                                    <i class="fas fa-utensils"></i>
-                                </div>
+                                <img src="assets/images/kitchen.JPG" alt="Kitchen Appliances">
                                 <h3>Kitchen Appliances</h3>
                                 <p>Premium kitchen tools</p>
                             </a>
@@ -177,9 +157,7 @@
                     <div class="carousel-slide">
                         <div class="category-card">
                             <a href="luxury-products.html">
-                                <div class="category-icon">
-                                    <i class="fas fa-gem"></i>
-                                </div>
+                                <img src="assets/images/luxury.JPG" alt="Luxury Products">
                                 <h3>Luxury Products</h3>
                                 <p>Exclusive premium items</p>
                             </a>
@@ -188,9 +166,7 @@
                     <div class="carousel-slide">
                         <div class="category-card">
                             <a href="men-products.html">
-                                <div class="category-icon">
-                                    <i class="fas fa-tshirt"></i>
-                                </div>
+                                <img src="assets/images/men.JPG" alt="Men Products">
                                 <h3>Men Products</h3>
                                 <p>Men's fashion & accessories</p>
                             </a>
@@ -199,9 +175,7 @@
                     <div class="carousel-slide">
                         <div class="category-card">
                             <a href="women-products.html">
-                                <div class="category-icon">
-                                    <i class="fas fa-female"></i>
-                                </div>
+                                <img src="assets/images/women.JPG" alt="Women Products">
                                 <h3>Women Products</h3>
                                 <p>Women's fashion & accessories</p>
                             </a>
