--- a/index.html
+++ b/index.html
@@ -168,41 +168,49 @@
             <div class="category-grid-four">
                 <div class="category-card">
                     <a href="household-appliances.html">
+                        <img src="assets/images/Household.JPG" alt="Household Appliances">
                         <h3>Household Appliances</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="kitchen-appliances.html">
+                        <img src="assets/images/kitchen.JPG" alt="Kitchen Appliances">
                         <h3>Kitchen Appliances</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="luxury-products.html">
+                        <img src="assets/images/luxury.JPG" alt="Luxury Products">
                         <h3>Luxury Products</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="men-products.html">
+                        <img src="assets/images/men.JPG" alt="Men Products">
                         <h3>Men Products</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="women-products.html">
+                        <img src="assets/images/women.JPG" alt="Women Products">
                         <h3>Women Products</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="supplements.html">
+                        <img src="assets/images/supplements.JPG" alt="Supplements">
                         <h3>Supplements</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="gadgets.html">
+                        <img src="assets/images/gadgets.JPG" alt="Gadgets">
                         <h3>Gadgets</h3>
                     </a>
                 </div>
                 <div class="category-card">
                     <a href="general-goods.html">
+                        <img src="assets/images/generalgoods.JPG" alt="General Goods">
                         <h3>General Goods</h3>
                     </a>
                 </div>
